<resources>
    <string name="app_name">Musics</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist">Playlist</string>
    <string name="albums">Albums</string>
    <string name="rechercher_un_album_ici">Rechercher un album ici</string>
    <string name="rechercher_une_musique_ici">Rechercher une musique ici</string>
    <string name="voir_tout">Voir tout</string>
    <string name="jouer_tout">jouer tout</string>
    <string name="musiques">Musiques</string>
    <string name="musique">Musique</string>
    <string name="musiques_les_plus_joues">Musiques les Plus joués</string>
    <string name="rechercher_une_playlist_ici">rechercher une playlist ici</string>
    <string name="artistes">Artistes</string>
    <string name="rechercher_un_artiste_ici">Rechercher un artiste ici</string>
    <string name="une_erreur_est_survenue">Une erreur est survenue</string>
    <string name="veuillez_choisir_un_son">Veuillez choisir un son</string>
    <string name="playing_notification_description">description du channel de la notification du lecteur audio</string>
    <string name="playing_notification_name">Musics_notification_name</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="precedent">précédent</string>
    <string name="suivant">suivant</string>
    <string name="error_loading_song">Impossible de charger ce morceau</string>
    <string name="paroles">Paroles</string>
    <string name="jouer_apres">Jouer après</string>
    <string name="ajouter_la_liste_de_lecture">Ajouter à la liste de lecture</string>
    <string name="partager">Partager</string>
    <string name="supprimer">Supprimer</string>
    <string name="details">Détails</string>
    <string name="lire_juste_apres">Lire juste après</string>
    <string name="la_liste_sera_joue_apres_le_song_en_cours">La liste sera jouée après le song en cours</string>
    <string name="la_liste_sera_joue_apres_celle_en_cours">La liste sera jouée après celle en cours</string>
    <string name="le_song_sera_jouer_juste_apres">Le song sera joué juste après celui en cours</string>
    <string name="le_song_sera_joue_juste_apres_la_liste_en_cours">Le song sera joué juste après la liste en cours</string>
    <string name="partager_via">Partager via</string>
    <string name="annuler">annuler</string>
    <string name="voulez_vous_vraiment_supprimer">Voulez vous vraiment supprimer?</string>
    <string name="titre">Titre</string>
    <string name="album">Album</string>
    <string name="artiste">Artiste</string>
    <string name="genre">Genre</string>
    <string name="track">Track</string>
    <string name="taille">Taille</string>
    <string name="duree">Durèe</string>
    <string name="localisation">Localisation</string>
    <string name="fermer">Fermer</string>
    <string name="disque">Disque</string>
    <string name="ajouter_a_une_playlist">Ajouter à une playlist</string>
    <string name="ajoute_a">Ajouté à</string>
    <string name="erreur_survenue_veuillez_reesayez">Une erreur est survenue, veuillez reéssayer</string>
    <string name="nouvelle_playlist">Nouvelle playlist</string>
    <string name="valider">Valider</string>
    <string name="donner_un_nom_a_la_playlist">veuillez founir un nom à cette playlist</string>
    <string name="suppression_effectuee">Suppression effectuée</string>
    <string name="permission_write_storage_message">Nous avons besoin de cette permission pour effectuer l\'action demandée</string>
    <string name="suppression_en_cours">Suppression en cours</string>
    <string name="selectionner_pour_jouer">Sélectionner pour jouer</string>
    <string name="veuillez_un_ou_plusieurs_element">Veuillez choisir un ou plusieurs éléments</string>
    <string name="ajouter">Ajouter</string>
    <string name="jouer">Jouer</string>
    <string name="selectionner_tout">Selectionner tout</string>
    <string name="selectionnes">selectionnés</string>
    <string name="selectionne">selectionné</string>
</resources>
