<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/dialog_min_width"
    android:paddingTop="@dimen/fab_margin"
    android:paddingStart="@dimen/fab_margin"
    android:paddingEnd="@dimen/fab_margin"
    android:layout_marginEnd="@dimen/fab_margin"
    android:layout_marginStart="@dimen/fab_margin"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/details"
        android:paddingBottom="@dimen/fab_margin"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/titre"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_titre_musique"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@android:color/black"
            android:alpha=".3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/album"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_nom_album"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@android:color/black"
            android:alpha=".3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/artiste"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_nom_artiste"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/genre"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_genre_musique"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@android:color/black"
            android:alpha=".3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/track"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_track_musique"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@android:color/black"
            android:alpha=".3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/taille"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_taille_musique"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@android:color/black"
            android:alpha=".3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/duree"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_duree_musique"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@android:color/black"
            android:alpha=".3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/localisation"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview_dialog_music_details_localisation_musique"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text=" Maitre Gims donnons"/>

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/dialog_button_layout"/>

</LinearLayout>