<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/default_activity_top_padding">

        <ImageButton
            android:id="@+id/imagebutton_home_fragment_drawer_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_dehaze_24"
            android:padding="@dimen/imagebutton_padding"
            android:background="@drawable/button_round_background"
            android:layout_marginStart="8dp"/>

        <ImageButton
            android:id="@+id/imagebutton_home_fragment_search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:padding="@dimen/imagebutton_padding"
            android:background="@drawable/button_round_background"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imagebutton_home_fragment_drawer_button"
            app:layout_constraintEnd_toStartOf="@id/imagebutton_home_fragment_search_button"
            app:layout_constraintTop_toTopOf="@id/imagebutton_home_fragment_search_button"
            app:layout_constraintBottom_toBottomOf="@id/imagebutton_home_fragment_drawer_button"
            android:textColor="@color/good_item_color"
            android:text="@string/app_name"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="@id/imagebutton_home_fragment_search_button"/>

        <TextView
            android:id="@+id/textview_home_fragment_most_played_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artistes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagebutton_home_fragment_search_button"
            android:textColor="@color/good_item_color"
            android:padding="@dimen/fab_margin" />

        <View
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/round_background"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_most_played_music"
            app:layout_constraintStart_toEndOf="@id/textview_home_fragment_most_played_music"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_most_played_music"
            app:layout_constraintVertical_bias="0.5" />


        <ImageButton
            android:id="@+id/imagebutton_home_fragment_more_most_played_music"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_most_played_music"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_most_played_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:padding="@dimen/imagebutton_padding"
            android:background="@drawable/button_round_background"
            android:layout_marginEnd="12dp"
            android:alpha=".8"
            android:onClick="navigate"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_home_fragment_more_most_played_music"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_most_played_music"
            app:layout_constraintEnd_toStartOf="@id/imagebutton_home_fragment_more_most_played_music"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_most_played_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voir_tout"
            android:textAllCaps="false"
            android:textColor="@color/good_item_color"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="navigate"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_home_fragment_favorite_song"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/most_played_music_item_height"
            app:layout_constraintTop_toBottomOf="@id/textview_home_fragment_most_played_music"/>

        <TextView
            android:id="@+id/textview_home_fragment_album_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewpager_home_fragment_favorite_song"
            android:textColor="@color/good_item_color"
            android:padding="@dimen/fab_margin"/>

        <View
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/round_background"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_album_text"
            app:layout_constraintStart_toEndOf="@id/textview_home_fragment_album_text"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_album_text"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/imagebutton_home_fragment_more_albums"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_album_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_album_text"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:padding="@dimen/imagebutton_padding"
            android:background="@drawable/button_round_background"
            android:layout_marginEnd="12dp"
            android:alpha=".8"
            android:visibility="gone"
            android:onClick="navigate"/>

        <Button
            android:id="@+id/button_home_fragment_more_albums"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_album_text"
            app:layout_constraintEnd_toStartOf="@id/imagebutton_home_fragment_more_albums"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_album_text"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/imagebutton_padding"
            android:text="@string/voir_tout"
            android:textAllCaps="false"
            android:textColor="@color/good_item_color"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="navigate"/>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingStart="@dimen/fab_margin"
            android:id="@+id/recyclerview_home_fragment_list_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_home_fragment_album_text"
            tools:listitem="@layout/album_item"
            tools:itemCount="1"/>

        <TextView
            android:id="@+id/textview_home_fragment_playlist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_home_fragment_list_album"
            android:textColor="@color/good_item_color"
            android:padding="@dimen/fab_margin"/>

        <View
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/round_background"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintStart_toEndOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/imagebutton_home_fragment_more_playlist"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:padding="@dimen/imagebutton_padding"
            android:background="@drawable/button_round_background"
            android:layout_marginEnd="12dp"
            android:alpha=".8"
            android:onClick="navigate"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_home_fragment_more_playlists"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintEnd_toStartOf="@id/imagebutton_home_fragment_more_playlist"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_playlist_text"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/imagebutton_padding"
            android:text="@string/voir_tout"
            android:textAllCaps="false"
            android:textColor="@color/good_item_color"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="navigate"/>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingStart="@dimen/fab_margin"
            android:id="@+id/recyclerview_home_fragment_list_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_home_fragment_playlist_text"
            tools:listitem="@layout/playlist_item"
            tools:itemCount="1"/>

        <TextView
            android:id="@+id/textview_home_fragment_music_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musiques"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerview_home_fragment_list_playlist"
            android:textColor="@color/good_item_color"
            android:padding="@dimen/fab_margin"/>

        <View
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/round_background"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_music_text"
            app:layout_constraintStart_toEndOf="@id/textview_home_fragment_music_text"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_music_text"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/imagebutton_home_fragment_more_musics"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_music_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_music_text"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:padding="@dimen/imagebutton_padding"
            android:background="@drawable/button_round_background"
            android:layout_marginEnd="12dp"
            android:alpha=".8"
            android:visibility="gone"
            android:onClick="navigate"/>

        <Button
            android:id="@+id/button_home_fragment_more_musics"
            app:layout_constraintBottom_toBottomOf="@id/textview_home_fragment_music_text"
            app:layout_constraintEnd_toStartOf="@id/imagebutton_home_fragment_more_musics"
            app:layout_constraintTop_toTopOf="@id/textview_home_fragment_music_text"
            app:layout_constraintVertical_bias="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/imagebutton_padding"
            android:text="@string/voir_tout"
            android:textAllCaps="false"
            android:textColor="@color/good_item_color"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="navigate"/>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingStart="@dimen/fab_margin"
            android:id="@+id/recyclerview_home_fragment_list_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_home_fragment_music_text"
            tools:listitem="@layout/music_item"
            tools:itemCount="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>